--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 	<body>
 		<h1>Hello world</h1>
 		<p>Hola a todos aqui willyrex comentando.</p>
+		<body style="background-color:black;">
 	</body>
 </html>
