--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>acsnchez.github.io</title>
 	</head>
 	<body>
+		<p style="color:#FFFFFF";</p>
 		<h1>Hello world</h1>
 		<p>Hola a todos aqui willyrex comentando.</p>
 		<body style="background-color:black;">
