--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<title>acsnchez.github.io</title>
 	</head>
 	<body>
-		<p style="color:#FFFFFF";</p>
-		<h1>Hello world</h1>
-		<p>Hola a todos aqui willyrex comentando.</p>
+		
+		<h1 style="color:#FFFFFF";Hello world</h1>
+		<p style="color:#FFFFFF";Hola a todos aqui willyrex comentando.</p>
 		<body style="background-color:black;">
 	</body>
 </html>
