--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
+  		<style>
+    			h1 { color: #FFFFFF; }
+			p { color: #FFFFFF; }
+  		</style>
+	</head>
+	<head>
 		<title>acsnchez.github.io</title>
 	</head>
 	<body>
 		
-		<h1 style="color:#FFFFFF";Hello world</h1>
-		<p style="color:#FFFFFF";Hola a todos aqui willyrex comentando.</p>
+		<h1>Hello world</h1>
+		<p>Hola a todos aqui willyrex comentando.</p>
 		<body style="background-color:black;">
 	</body>
 </html>
