--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 		
 		<h1>Hello world</h1>
 		<p>Hola a todos aqui willyrex comentando.</p>
-		<body style="background-color:black;">
+		<body style="background-color:red;">
 	</body>
 </html>
