--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+	<iframe style="margin-top: 20px;" src="//www.google.com/logos/2010/pacman10-hp.html" id="hplogo-complex" frameborder="0" height="304px" width="900px"></iframe>
 	<head>
   		<style>
     			h1 { color: #FFFFFF; }
