--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-	<iframe style="margin-top: 20px;" src="//www.google.com/logos/2010/pacman10-hp.html" id="hplogo-complex" frameborder="0" height="304px" width="900px"></iframe>
 	<head>
   		<style>
     			h1 { color: #FFFFFF; }
@@ -16,4 +15,8 @@
 		<p>Hola a todos aqui willyrex comentando.</p>
 		<body style="background-color:black;">
 	</body>
+	<div id="shim">shim for font face</div>
+	<h1>HTML5 Pacman</h1>
+	<p><a href="https://github.com/daleharvey/pacman" target="_blank">Credits: https://github.com/daleharvey/pacman</a></p>
+	<div id="pacman"></div>
 </html>
