--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		
 		<h1>Hello world</h1>
-		<p>Hola a todos aqui willyrex comentando.</p>
+		<p>Hola laura</p>
 		<body style="background-color:black;">
 	</body>
 </html>
