--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	</head>
 	<body>
 		
-		<h1>Hello world</h1>
-		<p>Hola laura</p>
+		<h1>Primer html</h1>
+		<p>Hola mundo</p>
 		<body style="background-color:black;">
 	</body>
 </html>
